<resources>
    <string name="app_name" translatable="false">Tablia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Firebase -->
    <!--  Nodes  -->
    <string name="usersNode" translatable="false">users</string>
    <string name="customerAccountSettingsNode" translatable="false">customer_account_settings</string>
    <string name="chefAccountSettingsNode" translatable="false">chef_account_settings</string>
    <string name="ProfilePhotosNode" translatable="false">profilePhotos</string>
    <!-- Fields-->
    <string name="profilePhotoField" translatable="false">profilePhoto</string>

    <!--  user types: used to distinguish whether the user is a customer or a chef  -->

    <string name="typeCustomer" translatable="false">customer</string>
    <string name="typeChef" translatable="false">chef</string>


    <!-- the returned from camera intent   -->
    <string name="selectedBitmap" translatable="false">selectedBitmap</string>

    <!--  intent source and directions  -->
    <string name="editProfileActivity" translatable="false">editProfileActivity</string>
    <string name="intentSource" translatable="false">intentSource</string>
    <string name="customerProfileActivity" translatable="false">customerProfileActivity</string>

    <!--  Navigation drawer  -->


    <string name="NameItem">Item Name</string>
    <string name="Price">Price</string>

    <string name="menuNode" translatable="false">menu</string>

    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>

    <!--  Categories array  -->


    <string-array name="Spinner_Item">
        <item>Dessert</item>
        <item>Grilled</item>
        <item>Drinks</item>
        <item>Macaroni</item>
        <item>Mahashy</item>
        <item>Salad</item>
        <item>Seafood</item>
        <item>Main Dishes</item>
        <item>Baking</item>
        <item>Soups</item>
        <item>Side Dishes</item>
    </string-array>

    <string name="Order">order</string>
    <string name="most_sold_item_for_today">sold</string>
    <string name="item">orders</string>
    <string name="followers">Followers</string>
    <string name="sold">Today\'s Orders</string>
    <string name="avg_sales">0</string>
    <string name="customer_rating">Your Rate</string>
    <string name="sales">Your Sales:&#160;</string>
    <string name="search">Search...</string>
    <string name="username">Username</string>
    <string name="avg_order">Number Of Orders You Delivered</string>
    <string name="submit">Submit</string>

    <!--  Chef Profiles by Yasmine -->
    <string name="availability" translatable="false">Available</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="max_number_of_orders">Max Number of Orders:&#160;</string>
    <string name="save_changes">Save Changes</string>
    <string name="chef_name">Chef Name</string>
    <string name="address">Address</string>
    <string name="orders">Orders</string>
    <string name="view_reviews">View Reviews</string>
    <string name="number_of_orders">Number of Orders</string>
    <string name="visit_menu">Visit Menu</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Following</string>

    <!-- Customer Home Fragment Yasmine -->
    <string name="top_chefs">Top Chefs</string>
    <string name="see_all_chefs">See All</string>
    <string name="recent_dishes">Recent Dishes</string>
    <string name="custname" translatable="false">CustName</string>
    <string name="itemname" translatable="false">ItemName</string>
    <string name="Category">Category</string>
    <string name="Description">Description</string>
    <string name="Ingredients">Ingredients</string>
    <string name="AddItem">Add Item</string>
    <string name="item_quantaty">Item Quantity:&#160;</string>
    <string name="_3_reviews">3 reviews</string>
    <string name="category">Category:&#160;</string>
    <string name="ingredients">Ingredients:&#160;</string>
    <string name="edit_menu_item">Edit Menu Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="sold_by">Sold by:&#160;</string>
    <string name="write_review">Write Review</string>
    <string name="order_time">Order Time:&#160;</string>
    <string name="chef_name_cust_order">Chef Name:&#160;</string>
    <string name="quantity">Quantity</string>
    <string name="add_a_review">Add a review</string>
    <string name="tab_on_star_to_rate">Tab on star to rate</string>
    <string name="what_do_you_think_about_our_product">What do you think about our product?</string>
    <string name="submit_review">Submit Review</string>
    <string name="title">Title</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="address_details">ADDRESS DETAILS</string>
    <string name="change">CHANGE</string>
    <string name="address_warrning">This is the address that will be delivered to if you\n choose (Door Delivery) make sure it\'s accurate</string>
    <string name="select_a_delivery_method">SELECT A DELIVERY METHOD</string>
    <string name="door_delivery">Door Delivery</string>
    <string name="change_warrning">Chef can change delivery fees and delivery time based on your place</string>
    <string name="delivrey_time">Your order will be delivered:</string>
    <string name="shipping_fee">Shipping fee:&#160;</string>
    <string name="pickup_order">Pickup Order</string>
    <string name="more_info">For more delivery information please contact chef</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_num">ORDER NUM:&#160;</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="shipping_fees">Shipping Fees:&#160;</string>
    <string name="chef_info">Chef Info</string>
    <string name="message">Message</string>
    <string name="items_in_your_order">ITEMS IN YOUR ORDER</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="status">Status</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="full_name">Full Name</string>
    <string name="cust_reg">Create Customer Account</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="cart">Cart</string>
    <string name="order_history">Order History</string>
    <string name="chef_reg">Create Chef Account</string>
    <string name="reviews">Reviews</string>
    <string name="complete_order">Complete Order</string>
    <string name="order_status">Order Status</string>
    <string name="top_chef">Top Chef</string>
    <string name="dis_items">Disabled Items</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_item_images" translatable="false">Add Item Images</string>
    <string name="filter_by_category">Filter By Category</string>
    <string name="select_categories">Select Categories</string>
    <string name="filter_by_price">Filter By Price</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="filtered_result">Filtered Result</string>
    <string name="following">Following</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome">Hello there,\nWelcome to Tablia</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="type_a_message">Type a message…</string>
    <string name="customer_info">Customer Info</string>
    <string name="a_chief_image" translatable="false">a chief image</string>
    <string name="a_customer_image" translatable="false">a customer image</string>
    <string name="chef_menu">Chef Menu</string>
    <string name="sub_total">Subtotal:&#160;</string>
    <string name="seen">seen</string>
    <string name="qty">Qty:&#160;</string>
    <string name="remove">Remove</string>
    <string name="rate_your_chef">Rate your Chef</string>
    <string name="customer_name">Customer Name:&#160;</string>
    <string name="total">Total:&#160;</string>
    <string name="quantity2">Quantity:&#160;</string>
    <string name="item_thumbnail" translatable="false">item thumbnail</string>
    <string name="later">Later</string>
    <string name="rate_chef">Rate Chef</string>
    <string name="profile">profile</string>
    <string name="menu">menu</string>
    <string name="delete">Delete</string>
    <string name="disable">Disable</string>
    <string name="edit">Edit</string>
    <string name="chat">Chat</string>
    <string name="order">Order</string>
    <string name="home">Home</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="seafood">Seafood</string>
    <string name="grilled">Grilled</string>
    <string name="baking">Baking</string>
    <string name="side_dishes">Side Dishes</string>
    <string name="macaroni">Macaroni</string>
    <string name="mahashy">Mahashy</string>
    <string name="salad">Salad</string>
    <string name="soups">Soups</string>
    <string name="dessert">Dessert</string>
    <string name="juice">Drinks</string>
    <string name="my_orders">My Orders</string>
    <string name="account">Account</string>
    <string name="signout">Signout</string>
    <string name="logout">Logout</string>
    <string name="enable">Enable</string>


</resources>
