<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerAccount.Reviews.AddReviewsActivity"

    >

    <RatingBar
        android:id="@+id/xRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_a_review"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideline25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/tab_on_star_to_rate"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toBottomOf="@+id/xRatingBar" />

    <EditText
        android:id="@+id/xReviewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/what_do_you_think_about_our_product"
        android:inputType="textPersonName"
        android:minHeight="100dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <Button
        android:id="@+id/xSubmitReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="48dp"
        android:text="@string/submit_review"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/rect_purple"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27" />
</androidx.constraintlayout.widget.ConstraintLayout>